# ArucoDetect

./: .gitignore  README.md
src/aruco/: CMakeLists.txt  package.xml
src/aruco/src/aruco/: markerdetector_impl.cpp
src/aruco_detect/: CMakeLists.txt  package.xml
src/aruco_detect/include/: aruco_utils.hpp
src/aruco_detect/launch/: marker_detect.launch
src/aruco_detect/rviz_cfg/: optimization.rviz
src/aruco_detect/src/: create_map.cpp  find_mark.cpp  record_mark.cpp
