<?xml version="1.0"?>
<package format="2">
  <name>aruco_detect</name>
  <version>0.0.0</version>
  <description>The aruco detect package</description>

  <maintainer email="lswang@mail.ecust.edu.cn">lswang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>aruco</build_depend>
  <build_export_depend>aruco</build_export_depend>
  <exec_depend>aruco</exec_depend>

  <build_depend>aruco_msgs</build_depend>
  <build_export_depend>aruco_msgs</build_export_depend>
  <exec_depend>aruco_msgs</exec_depend>

  <export>
  </export>
</package>
